# OmicsCanvas

./: 01_prepare_gff_to_bed_genes_length.py  GUI_requirements.txt  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt
docs/: 01_prepare_gff_to_bed_genes_length.README.md  02_prepare_cx_context_split.py.README.md  03_prepare_cx_replicate_merge.README.md  04_prepare_extract_gene_methylation.md  05_compute_bam_to_gene_matrices.md  06_compute_cx_gene_matrix.py.README.md  07_compute_bam_to_fpkm.py.README.md  08_compute_nb_de.py.README.md  09_compute_merge_expr_pairwise_de.py.README.md  10OmicsCanvas_Step3_Plot_Profiles_2D3D_EN.md  10_plot_genome_circos_Readme.updated.md  11OmicsCanvas_Step3_Plot_Profiles_2D3D_EN.updated.md  11OmicsCanvas_StepX_Track_vs_Expr_Heatmap_EN.md  12OmicsCanvas_Histone_Cluster_Pipeline_EN.md  12_plot_histone_vs_expr_heatmap.README.md  13OmicsCanvas_Histone_Cluster_Pipeline_EN.updated.md  13OmicsCanvas_Methylation_Profile_2D3D_EN.md  14OmicsCanvas_Meth_vs_Expr_Heatmap_EN.md  14OmicsCanvas_Methylation_Bin_Correlation_Triangle_EN.md  15OmicsCanvas_GeneTracks_2D3D_EN.md  15_plot_methylation_profile_2d3d.README.md  16OmicsCanvas_GeneCircle_EN.md  16_OmicsCanvas_Gene_Circle_Plot_EN.md  16_plot_meth_vs_expr_heatmap.README.md  17_plot_gene_tracks_2d3d_peaks.README.md  18_plot_gene_circle_plot_peaks.README.updated.md  19_omicscanvas_go_enrich.README.md  1OmicsCanvas_Step1_GFF3_to_BED_Length_EN.md  2BamTrackSuite_CX_tools_manual.en.md  4OmicsCanvas_Extract_Gene_Methylation_EN.md  5OmicsCanvas_Step2_BAM_to_Matrices_EN.md  (+2 more)
(+29 files in other folders)
